# Swin-Transformer

./: .gitignore  config.py  main_simmim_pt.py  pyproject.toml
configs/simmim/: simmim_pretrain__swinv2_base__img192_window12__50ep.yaml
models/: swin_transformer_v2.py
